chore: add 8 practice 7